[gd_scene format=3 uid="uid://bvo7bd16vdg8r"]

[ext_resource type="Theme" uid="uid://dd4mjbdjh70dg" path="res://themes/inputtext.tres" id="1_07kr6"]
[ext_resource type="Script" uid="uid://571s3ktyw33k" path="res://scripts/meca_edit.gd" id="2_07kr6"]

[node name="LineEdit" type="LineEdit" unique_id=1219361879]
offset_right = 40.0
offset_bottom = 25.0
theme = ExtResource("1_07kr6")
theme_override_colors/font_uneditable_color = Color(0.45646393, 0.456464, 0.456464, 1)
editable = false
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true
script = ExtResource("2_07kr6")

[node name="LineEdit" type="LineEdit" parent="." unique_id=1182377698]
layout_mode = 0
offset_right = 40.0
offset_bottom = 25.0
theme = ExtResource("1_07kr6")
editable = false
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
flat = true
virtual_keyboard_enabled = false

[connection signal="editing_toggled" from="LineEdit" to="." method="_on_editing_toggled"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_text_changed"]
